[package]
name = "servo-glutin"
version = "0.12.2"
authors = ["The glutin contributors, Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "Cross-platform OpenGL context provider."
keywords = ["windowing", "opengl"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tomaka/glutin"
documentation = "https://docs.rs/glutin"
build = "build.rs"

[lib]
name = "glutin"

[features]
default = ["image"]
headless = []

[dependencies]
libc = "0.2"

[build-dependencies]
gl_generator = "0.6"

[target.'cfg(target_os = "android")'.dependencies.android_glue]
version = "0.2"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cgl = "0.2"
cocoa = "0.10"
core-foundation = "0.4"
core-graphics = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.2"
shell32-sys = "0.1"
gdi32-sys = "0.2"
user32-sys = "0.2"
kernel32-sys = "0.2"
dwmapi-sys = "0.1"

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os="dragonfly", target_os="openbsd"))'.dependencies]
image = { version = "0.17", optional = true }
osmesa-sys = "0.1.0"
shared_library = "0.1.0"
x11-dl = "2.4"

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os="dragonfly", target_os="openbsd", target_os="windows"))'.dependencies]
lazy_static = "0.2"
