[package]
name = "servo-glutin"
version = "0.14.2"
authors = ["The glutin contributors, Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "Cross-platform OpenGL context provider."
keywords = ["windowing", "opengl"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/servo/glutin"
documentation = "https://docs.rs/servo-glutin"
build = "build.rs"

[lib]
name = "glutin"

[features]
default = ["image"]
headless = []

[dependencies]
libc = "0.2"

[build-dependencies]
gl_generator = "0.9"

[target.'cfg(target_os = "android")'.dependencies.android_glue]
version = "0.2"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cgl = "0.2"
cocoa = "0.14"
core-foundation = "0.5"
core-graphics = "0.13"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winnt", "wingdi", "dwmapi", "shellapi", "windowsx", "libloaderapi", "processthreadsapi"] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os="dragonfly", target_os="openbsd"))'.dependencies]
image = { version = "0.18", optional = true }
osmesa-sys = "0.1.0"
shared_library = "0.1.0"
x11-dl = "2.4"

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os="dragonfly", target_os="openbsd", target_os="windows"))'.dependencies]
lazy_static = "1"
